crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__printed@special_functions.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/special_functions.pcode
---
ConstantPool "x", "foo", "newname", "this", "getNextHighestDepth", "FSCommand:", "FSCommand:x", "http://ruffle.rs", "window", "/:$version", "url", "target", "_level12", "_level", "abc", "print:#bmax", "print:#bframe", "print:", "_root", "printasbitmap:#bmax", "printasbitmap:#bframe", "printasbitmap:", "_level123", "message", ""
Push 123
Call
Push constant0
GetVariable
AsciiToChar
Pop
Push constant0
GetVariable
GetVariable
Pop
Push constant0
GetVariable
Pop
Push constant1
GetVariable
Push constant2
Push 16384
Push 0
Push constant3
GetVariable
Push constant4
CallMethod
Add2
CloneSprite
Push constant5
Push constant0
GetVariable
StringAdd
Push true
GetUrl2 false, false, 0
Push constant6
Push false
GetUrl2 false, false, 0
GetUrl "FSCommand:x", ""
GetUrl "FSCommand:x", "foo"
GetTime
Pop
GetUrl "http://ruffle.rs", ""
GetUrl "http://ruffle.rs", "window"
Push constant7
Push constant8
GetUrl2 false, false, 1
Push constant9
GetVariable
Pop
GotoFrame 122
Play
GotoLabel "123"
Play
Push constant0
GetVariable
GotoFrame2 false, true
GotoFrame 122
Play
GotoLabel "123"
Play
Push constant0
GetVariable
GotoFrame2 false, true
Push constant0
GetVariable
GotoFrame2 false, true
GotoFrame 65535
Play
GotoFrame 0
Play
GotoFrame 1
Play
GotoFrame 0
Play
GotoFrame 122
GotoLabel "123"
Push constant0
GetVariable
GotoFrame2 false, false
GotoFrame 122
GotoLabel "123"
Push constant0
GetVariable
GotoFrame2 false, false
Push constant0
GetVariable
GotoFrame2 false, false
Push constant0
GetVariable
ToInteger
Pop
Push constant0
GetVariable
StringLength
Pop
Push constant10
Push constant11
GetUrl2 false, true, 0
Push constant10
Push constant11
GetUrl2 false, true, 1
GetUrl "url", "_level12"
Push constant10
Push constant12
GetUrl2 false, false, 1
Push constant10
Push constant13
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 1
Push constant10
Push constant11
GetUrl2 true, true, 0
Push constant10
Push constant0
GetVariable
GetUrl2 true, true, 0
Push constant10
Push constant11
GetUrl2 true, true, 1
Push constant10
Push constant12
GetUrl2 true, false, 0
Push constant10
Push constant12
GetUrl2 true, false, 1
Push constant10
Push constant13
Push constant0
GetVariable
StringAdd
GetUrl2 true, false, 1
Push constant0
GetVariable
MBAsciiToChar
Pop
Push constant0
GetVariable
MBStringLength
Pop
Push constant0
GetVariable
MBCharToAscii
Pop
Push constant14
Push 1
Push -1
MBStringExtract
Pop
Push constant14
Push 1
Push 2
MBStringExtract
Pop
NextFrame
GotoFrame 0
Push constant0
GetVariable
ToNumber
Pop
Push constant0
GetVariable
CharToAscii
Pop
Play
PrevFrame
GotoFrame 0
Push constant15
Push constant1
GetUrl2 false, false, 0
Push constant16
Push constant3
GetVariable
GetUrl2 false, false, 0
Push constant17
Push constant18
GetVariable
GetUrl2 false, false, 0
Push constant19
Push constant1
GetUrl2 false, false, 0
Push constant20
Push constant3
GetVariable
GetUrl2 false, false, 0
Push constant21
Push constant18
GetVariable
GetUrl2 false, false, 0
Push constant19
Push constant22
GetUrl2 false, false, 0
Push constant20
Push constant13
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 0
Push constant21
Push constant13
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 0
Push constant15
Push constant22
GetUrl2 false, false, 0
Push constant16
Push constant13
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 0
Push constant17
Push constant13
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 0
Push 123
RandomNumber
Pop
Push constant0
GetVariable
RemoveSprite
Push 0
Push 0
Push constant0
GetVariable
StartDrag
Push 0
Push 1
Push constant0
GetVariable
StartDrag
Push 0
Push 0
Push constant0
GetVariable
StartDrag
Push 1
Push 2
Push 3
Push 4
Push 1
Push 1
Push constant0
GetVariable
StartDrag
Stop
StopSounds
EndDrag
Push constant0
GetVariable
ToString
Pop
Push constant0
GetVariable
Push 1
Push -1
StringExtract
Pop
Push constant0
GetVariable
Push 1
Push 2
StringExtract
Pop
Push constant0
GetVariable
TargetPath
Pop
ToggleQuality
Push constant23
Trace
Push constant24
Push constant0
GetVariable
GetUrl2 false, true, 0
Push constant24
Push constant13
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 0
GetUrl "", "_level123"
