crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__printed@special_properties.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/special_properties.pcode
---
ConstantPool "-- _x --", "", "foo", "_x", "this", "foobar", "-- _y --", "_y", "-- _xscale --", "_xscale", "-- _yscale --", "_yscale", "-- _currentframe --", "_currentframe", "-- _totalframes --", "_totalframes", "-- _alpha --", "_alpha", "-- _visible --", "_visible", "-- _width --", "_width", "-- _height --", "_height", "-- _rotation --", "_rotation", "-- _target --", "_target", "value", "-- _framesloaded --", "_framesloaded", "-- _name --", "_name", "-- _droptarget --", "_droptarget", "-- _url --", "_url", "-- _highquality --", "_highquality", "-- _focusrect --", "_focusrect", "-- _soundbuftime --", "_soundbuftime", "-- _quality --", "_quality", "-- _xmouse --", "_xmouse", "-- _ymouse --", "_ymouse", "-- misc --"
Push constant0
Trace
Push constant1
Push 0
GetProperty
Trace
Push constant2
GetVariable
Push constant3
GetMember
Trace
Push constant2
GetVariable
Push constant3
GetMember
Trace
Push constant4
GetVariable
Push 0
GetProperty
Trace
Push constant5
GetVariable
Push 0
Push 123
SetProperty
Push constant1
Push 0
Push 123
SetProperty
Push constant6
Trace
Push constant1
Push 1
GetProperty
Trace
Push constant2
GetVariable
Push constant7
GetMember
Trace
Push constant2
GetVariable
Push constant7
GetMember
Trace
Push constant4
GetVariable
Push 1
GetProperty
Trace
Push constant5
GetVariable
Push 1
Push 123
SetProperty
Push constant1
Push 1
Push 123
SetProperty
Push constant8
Trace
Push constant1
Push 2
GetProperty
Trace
Push constant2
GetVariable
Push constant9
GetMember
Trace
Push constant2
GetVariable
Push constant9
GetMember
Trace
Push constant4
GetVariable
Push 2
GetProperty
Trace
Push constant5
GetVariable
Push 2
Push 123
SetProperty
Push constant1
Push 2
Push 123
SetProperty
Push constant10
Trace
Push constant1
Push 3
GetProperty
Trace
Push constant2
GetVariable
Push constant11
GetMember
Trace
Push constant2
GetVariable
Push constant11
GetMember
Trace
Push constant4
GetVariable
Push 3
GetProperty
Trace
Push constant5
GetVariable
Push 3
Push 123
SetProperty
Push constant1
Push 3
Push 123
SetProperty
Push constant12
Trace
Push constant1
Push 4
GetProperty
Trace
Push constant2
GetVariable
Push constant13
GetMember
Trace
Push constant2
GetVariable
Push constant13
GetMember
Trace
Push constant4
GetVariable
Push 4
GetProperty
Trace
Push constant5
GetVariable
Push 4
Push 123
SetProperty
Push constant1
Push 4
Push 123
SetProperty
Push constant14
Trace
Push constant1
Push 5
GetProperty
Trace
Push constant2
GetVariable
Push constant15
GetMember
Trace
Push constant2
GetVariable
Push constant15
GetMember
Trace
Push constant4
GetVariable
Push 5
GetProperty
Trace
Push constant5
GetVariable
Push 5
Push 123
SetProperty
Push constant1
Push 5
Push 123
SetProperty
Push constant16
Trace
Push constant1
Push 6
GetProperty
Trace
Push constant2
GetVariable
Push constant17
GetMember
Trace
Push constant2
GetVariable
Push constant17
GetMember
Trace
Push constant4
GetVariable
Push 6
GetProperty
Trace
Push constant5
GetVariable
Push 6
Push 123
SetProperty
Push constant1
Push 6
Push 123
SetProperty
Push constant18
Trace
Push constant1
Push 7
GetProperty
Trace
Push constant2
GetVariable
Push constant19
GetMember
Trace
Push constant2
GetVariable
Push constant19
GetMember
Trace
Push constant4
GetVariable
Push 7
GetProperty
Trace
Push constant5
GetVariable
Push 7
Push false
SetProperty
Push constant1
Push 7
Push false
SetProperty
Push constant20
Trace
Push constant1
Push 8
GetProperty
Trace
Push constant2
GetVariable
Push constant21
GetMember
Trace
Push constant2
GetVariable
Push constant21
GetMember
Trace
Push constant4
GetVariable
Push 8
GetProperty
Trace
Push constant5
GetVariable
Push 8
Push 123
SetProperty
Push constant1
Push 8
Push 123
SetProperty
Push constant22
Trace
Push constant1
Push 9
GetProperty
Trace
Push constant2
GetVariable
Push constant23
GetMember
Trace
Push constant2
GetVariable
Push constant23
GetMember
Trace
Push constant4
GetVariable
Push 9
GetProperty
Trace
Push constant5
GetVariable
Push 9
Push 123
SetProperty
Push constant1
Push 9
Push 123
SetProperty
Push constant24
Trace
Push constant1
Push 10
GetProperty
Trace
Push constant2
GetVariable
Push constant25
GetMember
Trace
Push constant2
GetVariable
Push constant25
GetMember
Trace
Push constant4
GetVariable
Push 10
GetProperty
Trace
Push constant5
GetVariable
Push 10
Push 123
SetProperty
Push constant1
Push 10
Push 123
SetProperty
Push constant26
Trace
Push constant1
Push 11
GetProperty
Trace
Push constant2
GetVariable
Push constant27
GetMember
Trace
Push constant2
GetVariable
Push constant27
GetMember
Trace
Push constant4
GetVariable
Push 11
GetProperty
Trace
Push constant5
GetVariable
Push 11
Push constant28
SetProperty
Push constant1
Push 11
Push constant28
SetProperty
Push constant29
Trace
Push constant1
Push 12
GetProperty
Trace
Push constant2
GetVariable
Push constant30
GetMember
Trace
Push constant2
GetVariable
Push constant30
GetMember
Trace
Push constant4
GetVariable
Push 12
GetProperty
Trace
Push constant5
GetVariable
Push 12
Push 123
SetProperty
Push constant1
Push 12
Push 123
SetProperty
Push constant31
Trace
Push constant1
Push 13
GetProperty
Trace
Push constant2
GetVariable
Push constant32
GetMember
Trace
Push constant2
GetVariable
Push constant32
GetMember
Trace
Push constant4
GetVariable
Push 13
GetProperty
Trace
Push constant5
GetVariable
Push 13
Push constant28
SetProperty
Push constant1
Push 13
Push constant28
SetProperty
Push constant33
Trace
Push constant1
Push 14
GetProperty
Trace
Push constant2
GetVariable
Push constant34
GetMember
Trace
Push constant2
GetVariable
Push constant34
GetMember
Trace
Push constant4
GetVariable
Push 14
GetProperty
Trace
Push constant5
GetVariable
Push 14
Push constant28
SetProperty
Push constant1
Push 14
Push constant28
SetProperty
Push constant35
Trace
Push constant1
Push 15
GetProperty
Trace
Push constant2
GetVariable
Push constant36
GetMember
Trace
Push constant2
GetVariable
Push constant36
GetMember
Trace
Push constant4
GetVariable
Push 15
GetProperty
Trace
Push constant5
GetVariable
Push 15
Push constant28
SetProperty
Push constant1
Push 15
Push constant28
SetProperty
Push constant37
Trace
Push constant1
Push 16
GetProperty
Trace
Push constant2
GetVariable
Push constant38
GetMember
Trace
Push constant2
GetVariable
Push constant38
GetMember
Trace
Push constant4
GetVariable
Push 16
GetProperty
Trace
Push constant5
GetVariable
Push 16
Push 123
SetProperty
Push constant1
Push 16
Push 123
SetProperty
Push constant39
Trace
Push constant1
Push 17
GetProperty
Trace
Push constant2
GetVariable
Push constant40
GetMember
Trace
Push constant2
GetVariable
Push constant40
GetMember
Trace
Push constant4
GetVariable
Push 17
GetProperty
Trace
Push constant5
GetVariable
Push 17
Push 123
SetProperty
Push constant1
Push 17
Push true
SetProperty
Push constant41
Trace
Push constant1
Push 18
GetProperty
Trace
Push constant2
GetVariable
Push constant42
GetMember
Trace
Push constant2
GetVariable
Push constant42
GetMember
Trace
Push constant4
GetVariable
Push 18
GetProperty
Trace
Push constant5
GetVariable
Push 18
Push 123
SetProperty
Push constant1
Push 18
Push 123
SetProperty
Push constant43
Trace
Push constant1
Push 19
GetProperty
Trace
Push constant2
GetVariable
Push constant44
GetMember
Trace
Push constant2
GetVariable
Push constant44
GetMember
Trace
Push constant4
GetVariable
Push 19
GetProperty
Trace
Push constant5
GetVariable
Push 19
Push constant28
SetProperty
Push constant1
Push 19
Push constant28
SetProperty
Push constant45
Trace
Push constant1
Push 20
GetProperty
Trace
Push constant2
GetVariable
Push constant46
GetMember
Trace
Push constant2
GetVariable
Push constant46
GetMember
Trace
Push constant4
GetVariable
Push 20
GetProperty
Trace
Push constant5
GetVariable
Push 20
Push 123
SetProperty
Push constant1
Push 20
Push 123
SetProperty
Push constant47
Trace
Push constant1
Push 21
GetProperty
Trace
Push constant2
GetVariable
Push constant48
GetMember
Trace
Push constant2
GetVariable
Push constant48
GetMember
Trace
Push constant4
GetVariable
Push 21
GetProperty
Trace
Push constant5
GetVariable
Push 21
Push 123
SetProperty
Push constant1
Push 21
Push 123
SetProperty
Push constant49
Trace
Push constant1
Push 19
GetProperty
Trace
Push constant1
Push 6
Push constant1
Push 6
GetProperty
Push 1
Add2
StoreRegister 0
SetProperty
Push register0
Trace
